--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,58 @@
+version: "3.8"
+
 services:
+  traefik:
+    image: traefik:v2.11
+    container_name: traefik
+    restart: unless-stopped
+    command:
+      # Log level and access log are enabled
+      - "--log.level=info"
+      - "--accesslog=true" # Enable Docker provider; disable auto-exposure for extra security
+      - "--entrypoints.web.address=:80"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedByDefault=false" # Define only the TLS (secure) entrypoint on port 443
+      - "--entrypoints.websecure.address=:443"
+      - "--entrypoints.websecure.http.tls.certResolver=devops"
+      - "--entrypoints.websecure.http2.maxConcurrentStreams=1000"
+      - "--entrypoints.websecure.http.tls.domains[0].main=dpp-demostrator.if4testing.rocks" # ACME DNS challenge with Cloudflare
+      - "--certificatesresolvers.devops.acme.dnschallenge=true"
+      - "--certificatesresolvers.devops.acme.dnschallenge.provider=cloudflare"
+      - "--certificatesresolvers.devops.acme.email=devops@iota.org"
+      - "--certificatesresolvers.devops.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.devops.acme.dnschallenge.delaybeforecheck=0"
+    ports:
+      - "443:443"
+    environment:
+      CLOUDFLARE_EMAIL: "it@iota.org"
+      CLOUDFLARE_DNS_API_TOKEN: ${CLOUDFLARE_DNS_API_TOKEN}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./letsencrypt:/letsencrypt
+    networks:
+      - traefik_net
+
   redis:
     image: redis:latest
     container_name: gas-station-redis
-    ports:
-      - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - traefik_net
+
   iota-gas-station:
     image: "${DOCKER_IMAGE:-iotaledger/gas-station:latest}"
     build:
       context: ..
+      dockerfile: docker/Dockerfile
       args:
         - BUILD_DATE=${BUILD_DATE:-latest}
         - GIT_REVISION=${GIT_REVISION:-latest}
-      dockerfile: docker/Dockerfile
     container_name: iota-gas-station
     command: ["--config-path", "/app/config.yaml"]
     depends_on:
       - redis
     ports:
-      - "9527:9527" # RPC port
       - "9184:9184" # Metrics port
     environment:
       - CONFIG_PATH=/app/config.yaml
@@ -27,6 +60,16 @@ services:
       - GAS_STATION_AUTH=${GAS_STATION_AUTH}
     volumes:
       - ${LOCAL_CONFIG_PATH:-./config.yaml}:/app/config.yaml
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.gas.rule=Host(`dpp-demostrator.if4testing.rocks`) && PathPrefix(`/gas`)"
+      - "traefik.http.routers.gas.entrypoints=websecure"
+      - "traefik.http.routers.gas.tls.certresolver=devops"
+      - "traefik.http.services.gas.loadbalancer.server.port=9527"
+      - "traefik.http.routers.gas.middlewares=strip-gas-prefix"
+      - "traefik.http.middlewares.strip-gas-prefix.stripprefix.prefixes=/gas"
+    networks:
+      - traefik_net
 
   frontend:
     build:
@@ -51,8 +94,14 @@ services:
       BACKEND_API_KEY: ${BACKEND_API_KEY}
       GAS_STATION_URL: ${GAS_STATION_URL}
       GAS_STATION_AUTH: ${GAS_STATION_AUTH}
-    ports:
-      - "3000:3000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host(`dpp-demostrator.if4testing.rocks`)"
+      - "traefik.http.routers.frontend.entrypoints=websecure"
+      - "traefik.http.routers.frontend.tls.certresolver=devops"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+    networks:
+      - traefik_net
 
   backend:
     build:
@@ -68,8 +117,13 @@ services:
       TCP_LISTNER: ${TCP_LISTNER}
       ROOT_AUTH_SECRET_KEY: ${ROOT_AUTH_SECRET_KEY}
       MANUFACTURER_SECRET_KEY: ${MANUFACTURER_SECRET_KEY}
-    ports:
-      - "3001:3001"
+    networks:
+      - traefik_net
 
 volumes:
   redis_data:
+  traefik_letsencrypt:
+
+networks:
+  traefik_net:
+    driver: bridge
