--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,7 +21,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 shared-crypto = { git = "https://github.com/iotaledger/iota.git", package = "shared-crypto", tag = "v0.11.6-rc" }
 tokio = { version = "1.43.0", features = ["full"] }
-ith = { path = "./ith/ith.rs/ith" }
+ith = { git = "https://github.com/iotaledger/ith.git", branch = "chore/update-deps" }
 dotenvy = "0.15.7"
 axum = "0.8.1"
 
