--- a/contract/Move.toml
+++ b/contract/Move.toml
@@ -6,9 +6,9 @@ edition = "2024.beta"
 
 
 [dependencies]
-ith = { local = "/Users/valeriomellini/source-code/iota/ith/ith.move" }
 MoveStdlib = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/move-stdlib", rev = "v0.1.4" }
 Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "v0.1.4" }
+ith = { git = "https://github.com/iotaledger/ith.git", rev = "chore/update-deps", subdir = "ith.move" }
 
 [addresses]
 audit_trails = "0x0"
