WIP on feature/ui-improvements
fix: compatibility check with v0.11.6-rc

--- a/backend/ith/ith.move/Move.toml
+++ b/backend/ith/ith.move/Move.toml
@@ -10,8 +10,8 @@ authors = [
 ]
 
 [dependencies]
-MoveStdlib = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/move-stdlib", rev = "v0.1.4" }
-Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "v0.1.4" }
+MoveStdlib = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/move-stdlib", rev = "v0.11.6-rc" }
+Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "v0.11.6-rc" }
 
 [addresses]
 ith = "0x0"
