--- a/contract/Move.toml
+++ b/contract/Move.toml
@@ -6,9 +6,9 @@ edition = "2024.beta"
 
 
 [dependencies]
-ith = { local = "/Users/valeriomellini/source-code/iota/ith/ith.move" }
-MoveStdlib = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/move-stdlib", rev = "v0.1.4" }
-Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "v0.1.4" }
+ith = { local = "/Users/valeriomellini/source-code/iota/dpp-demonstrator/backend/ith/ith.move" }
+MoveStdlib = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/move-stdlib", rev = "v0.11.6-rc" }
+Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "v0.11.6-rc" }
 
 [addresses]
 audit_trails = "0x0"
