--- a/contract/Move.toml
+++ b/contract/Move.toml
@@ -6,7 +6,7 @@ edition = "2024.beta"
 
 
 [dependencies]
-ith = { local = "/Users/valeriomellini/source-code/iota/dpp-demonstrator/backend/ith/ith.move" }
+ith = { local = "../backend/ith/ith.move" }
 MoveStdlib = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/move-stdlib", rev = "v0.11.6-rc" }
 Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "v0.11.6-rc" }
 
