--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -4,6 +4,8 @@ FROM node:18-bullseye
 ARG NEXT_PUBLIC_EXPLORER_URL
 ARG NEXT_PUBLIC_AUDIT_TRAIL_PKG
 ARG NEXT_PUBLIC_REFRESH_INTERVAL_MS
+ARG NEXT_PUBLIC_REWARD_WHITELIST_ID
+ARG NEXT_PUBLIC_ADMIN_CAP_ID
 ARG BACKEND_ENDPOINT
 ARG BACKEND_API_KEY
 ARG GAS_STATION_URL
@@ -11,6 +13,8 @@ ARG GAS_STATION_AUTH
 
 ENV NEXT_PUBLIC_EXPLORER_URL=$NEXT_PUBLIC_EXPLORER_URL
 ENV NEXT_PUBLIC_AUDIT_TRAIL_PKG=$NEXT_PUBLIC_AUDIT_TRAIL_PKG
+ENV NEXT_PUBLIC_REWARD_WHITELIST_ID=$NEXT_PUBLIC_REWARD_WHITELIST_ID
+ENV NEXT_PUBLIC_ADMIN_CAP_ID=$NEXT_PUBLIC_ADMIN_CAP_ID
 ENV NEXT_PUBLIC_REFRESH_INTERVAL_MS=$NEXT_PUBLIC_REFRESH_INTERVAL_MS
 ENV BACKEND_ENDPOINT=$BACKEND_ENDPOINT
 ENV BACKEND_API_KEY=$BACKEND_API_KEY
