fix: env variable updated

--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -2,6 +2,7 @@
 FROM node:18-bullseye
 
 ARG NEXT_PUBLIC_EXPLORER_URL
+ARG NEXT_PUBLIC_DAPP_URL
 ARG NEXT_PUBLIC_AUDIT_TRAIL_PKG
 ARG NEXT_PUBLIC_REFRESH_INTERVAL_MS
 ARG NEXT_PUBLIC_REWARD_WHITELIST_ID
@@ -12,6 +13,7 @@ ARG GAS_STATION_URL
 ARG GAS_STATION_AUTH
 
 ENV NEXT_PUBLIC_EXPLORER_URL=$NEXT_PUBLIC_EXPLORER_URL
+ENV NEXT_PUBLIC_DAPP_URL=$NEXT_PUBLIC_DAPP_URL
 ENV NEXT_PUBLIC_AUDIT_TRAIL_PKG=$NEXT_PUBLIC_AUDIT_TRAIL_PKG
 ENV NEXT_PUBLIC_REWARD_WHITELIST_ID=$NEXT_PUBLIC_REWARD_WHITELIST_ID
 ENV NEXT_PUBLIC_ADMIN_CAP_ID=$NEXT_PUBLIC_ADMIN_CAP_ID
