--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -11,6 +11,7 @@ ARG BACKEND_ENDPOINT
 ARG BACKEND_API_KEY
 ARG GAS_STATION_URL
 ARG GAS_STATION_AUTH
+ARG NEXT_PUBLIC_REWARD_FLAG
 
 ENV NEXT_PUBLIC_EXPLORER_URL=$NEXT_PUBLIC_EXPLORER_URL
 ENV NEXT_PUBLIC_DAPP_URL=$NEXT_PUBLIC_DAPP_URL
@@ -22,6 +23,7 @@ ENV BACKEND_ENDPOINT=$BACKEND_ENDPOINT
 ENV BACKEND_API_KEY=$BACKEND_API_KEY
 ENV GAS_STATION_URL=$GAS_STATION_URL
 ENV GAS_STATION_AUTH=$GAS_STATION_AUTH
+ENV NEXT_PUBLIC_REWARD_FLAG=$NEXT_PUBLIC_REWARD_FLAG
 
 WORKDIR /usr/src/app
 
