fix: explorer url

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ NEXT_PUBLIC_REWARD_WHITELIST_ID=0xwhitelist
 NEXT_PUBLIC_ADMIN_CAP_ID=0xadmincap
 NEXT_PUBLIC_REFRESH_INTERVAL_MS=5000
 NEXT_PUBLIC_DAPP_URL=https://dpp-demostrator.if4testing.rocks
+NEXT_PUBLIC_NETWORK=testnet
 BACKEND_ENDPOINT=http://backend:3001
 BACKEND_API_KEY=12345
 GAS_STATION_URL=http://iota-gas-station:9527
