--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -12,6 +12,7 @@ ARG BACKEND_API_KEY
 ARG GAS_STATION_URL
 ARG GAS_STATION_AUTH
 ARG NEXT_PUBLIC_HAS_REWARD
+ARG NEXT_PUBLIC_NETWORK
 
 ENV NEXT_PUBLIC_EXPLORER_URL=$NEXT_PUBLIC_EXPLORER_URL
 ENV NEXT_PUBLIC_DAPP_URL=$NEXT_PUBLIC_DAPP_URL
@@ -24,6 +25,7 @@ ENV BACKEND_API_KEY=$BACKEND_API_KEY
 ENV GAS_STATION_URL=$GAS_STATION_URL
 ENV GAS_STATION_AUTH=$GAS_STATION_AUTH
 ENV NEXT_PUBLIC_HAS_REWARD=$NEXT_PUBLIC_HAS_REWARD
+ENV NEXT_PUBLIC_NETWORK=$NEXT_PUBLIC_NETWORK
 
 WORKDIR /usr/src/app
 
