--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -13,6 +13,7 @@ ARG GAS_STATION_URL
 ARG GAS_STATION_AUTH
 ARG NEXT_PUBLIC_HAS_REWARD
 ARG NEXT_PUBLIC_NETWORK
+ARG NEXT_PUBLIC_PRODUCT_ID
 
 ENV NEXT_PUBLIC_EXPLORER_URL=$NEXT_PUBLIC_EXPLORER_URL
 ENV NEXT_PUBLIC_DAPP_URL=$NEXT_PUBLIC_DAPP_URL
@@ -26,6 +27,7 @@ ENV GAS_STATION_URL=$GAS_STATION_URL
 ENV GAS_STATION_AUTH=$GAS_STATION_AUTH
 ENV NEXT_PUBLIC_HAS_REWARD=$NEXT_PUBLIC_HAS_REWARD
 ENV NEXT_PUBLIC_NETWORK=$NEXT_PUBLIC_NETWORK
+ENV NEXT_PUBLIC_PRODUCT_ID=$NEXT_PUBLIC_PRODUCT_ID
 
 WORKDIR /usr/src/app
 
