chore: new env variable

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -44,12 +44,14 @@ ARG API_KEY
 ARG TCP_LISTNER
 ARG ROOT_AUTH_SECRET_KEY
 ARG MANUFACTURER_SECRET_KEY
+ARG IOTA_IDENTITY_PKG_ID
 
 ENV ITH_PKG_ID=$ITH_PKG_ID
 ENV API_KEY=$API_KEY
 ENV TCP_LISTNER=$TCP_LISTNER
 ENV ROOT_AUTH_SECRET_KEY=$ROOT_AUTH_SECRET_KEY
 ENV MANUFACTURER_SECRET_KEY=$MANUFACTURER_SECRET_KEY
+ENV IOTA_IDENTITY_PKG_ID=$IOTA_IDENTITY_PKG_ID
 
 CMD sh -c './import_accounts && exec ./main'
 
