--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,6 +120,7 @@ services:
       TCP_LISTNER: ${TCP_LISTNER}
       ROOT_AUTH_SECRET_KEY: ${ROOT_AUTH_SECRET_KEY}
       MANUFACTURER_SECRET_KEY: ${MANUFACTURER_SECRET_KEY}
+      IOTA_IDENTITY_PKG_ID: ${IOTA_IDENTITY_PKG_ID}
     networks:
       - traefik_net
 
