--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "1.0.97"
 async-trait = "0.1.87"
 bcs = "0.1"
 fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "2f502fd8570fe4e9cff36eea5bbd6fef22002898", package = "fastcrypto" }
+identity_iota = { git = "https://github.com/iotaledger/identity.git", tag = "v1.6.0-beta.1", features=["memstore", "keytool"] }
 iota = { git = "https://github.com/iotaledger/iota.git", package = "iota", tag = "v0.12.0-rc" }
 iota-keys = { git = "https://github.com/iotaledger/iota.git", package = "iota-keys", tag = "v0.12.0-rc" }
 iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v0.12.0-rc" }
@@ -24,6 +25,7 @@ tokio = { version = "1.43.0", features = ["full"] }
 ith = { path = "./ith/ith.rs/ith" }
 dotenvy = "0.15.7"
 axum = "0.8.1"
+rand = "0.8.5"
 
 
 [lib]
@@ -48,3 +50,7 @@ path = "src/scripts/import_accounts.rs"
 [[bin]]
 name = "faucet"
 path = "src/scripts/faucet.rs"
+
+[[bin]]
+name = "identity"
+path = "src/scripts/identity.rs"
