--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,13 @@
     "@iota/apps-ui-icons": "^0.2.1",
     "@iota/apps-ui-kit": "^0.2.1",
     "@iota/dapp-kit": "^0.4.1",
-    "@iota/iota-sdk": "^0.6.0",
+    "@iota/identity-wasm": "^1.6.0-beta.3",
+    "@iota/iota-sdk": "^1.1.0",
     "@tanstack/react-query": "^5.40.1",
     "dotenv": "^16.4.7",
+    "i": "^0.3.7",
     "next": "^14.0.3",
+    "npm": "^11.4.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -27,9 +30,9 @@
     "@babel/core": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
     "@types/node": "18.11.4",
+    "@types/qrcode": "^1.5.4",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
-    "@types/qrcode": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "autoprefixer": "^10.4.21",
