--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
       args:
         NEXT_PUBLIC_EXPLORER_URL: ${NEXT_PUBLIC_EXPLORER_URL}
         NEXT_PUBLIC_DAPP_URL: ${NEXT_PUBLIC_DAPP_URL}
+        NEXT_PUBLIC_NETWORK_URL: ${NEXT_PUBLIC_NETWORK_URL}
         NEXT_PUBLIC_AUDIT_TRAIL_PKG: ${NEXT_PUBLIC_AUDIT_TRAIL_PKG}
         NEXT_PUBLIC_REWARD_WHITELIST_ID: ${NEXT_PUBLIC_REWARD_WHITELIST_ID}
         NEXT_PUBLIC_ADMIN_CAP_ID: ${NEXT_PUBLIC_ADMIN_CAP_ID}
@@ -85,6 +86,7 @@ services:
         NEXT_PUBLIC_HAS_REWARD: ${NEXT_PUBLIC_HAS_REWARD}
         NEXT_PUBLIC_NETWORK: ${NEXT_PUBLIC_NETWORK}
         NEXT_PUBLIC_PRODUCT_ID: ${NEXT_PUBLIC_PRODUCT_ID}
+        IOTA_IDENTITY_PKG_ID: ${IOTA_IDENTITY_PKG_ID}
         BACKEND_ENDPOINT: ${BACKEND_ENDPOINT}
         BACKEND_API_KEY: ${BACKEND_API_KEY}
         GAS_STATION_URL: ${GAS_STATION_URL}
