--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -14,13 +14,17 @@ ARG GAS_STATION_AUTH
 ARG NEXT_PUBLIC_HAS_REWARD
 ARG NEXT_PUBLIC_NETWORK
 ARG NEXT_PUBLIC_PRODUCT_ID
+ARG NEXT_PUBLIC_NETWORK_URL
+ARG IOTA_IDENTITY_PKG_ID
 
 ENV NEXT_PUBLIC_EXPLORER_URL=$NEXT_PUBLIC_EXPLORER_URL
 ENV NEXT_PUBLIC_DAPP_URL=$NEXT_PUBLIC_DAPP_URL
+ENV NEXT_PUBLIC_NETWORK_URL=$NEXT_PUBLIC_NETWORK_URL
 ENV NEXT_PUBLIC_AUDIT_TRAIL_PKG=$NEXT_PUBLIC_AUDIT_TRAIL_PKG
 ENV NEXT_PUBLIC_REWARD_WHITELIST_ID=$NEXT_PUBLIC_REWARD_WHITELIST_ID
 ENV NEXT_PUBLIC_ADMIN_CAP_ID=$NEXT_PUBLIC_ADMIN_CAP_ID
 ENV NEXT_PUBLIC_REFRESH_INTERVAL_MS=$NEXT_PUBLIC_REFRESH_INTERVAL_MS
+ENV IOTA_IDENTITY_PKG_ID=$IOTA_IDENTITY_PKG_ID
 ENV BACKEND_ENDPOINT=$BACKEND_ENDPOINT
 ENV BACKEND_API_KEY=$BACKEND_API_KEY
 ENV GAS_STATION_URL=$GAS_STATION_URL
