--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,18 +6,29 @@ services:
     container_name: traefik
     restart: unless-stopped
     command:
+      # Log level and access log are enabled
       - "--log.level=info"
-      - "--accesslog=true"
+      - "--accesslog=true" # Enable Docker provider; disable auto-exposure for extra security
       - "--entrypoints.web.address=:80"
       - "--providers.docker=true"
-      - "--providers.docker.exposedByDefault=false"
-      - "--api.dashboard=true"
-      - "--api.insecure=true"
+      - "--providers.docker.exposedByDefault=false" # Define only the TLS (secure) entrypoint on port 443
+      - "--entrypoints.websecure.address=:443"
+      - "--entrypoints.websecure.http.tls.certResolver=devops"
+      - "--entrypoints.websecure.http2.maxConcurrentStreams=1000"
+      - "--entrypoints.websecure.http.tls.domains[0].main=dpp-demostrator.if4testing.rocks" # ACME DNS challenge with Cloudflare
+      - "--certificatesresolvers.devops.acme.dnschallenge=true"
+      - "--certificatesresolvers.devops.acme.dnschallenge.provider=cloudflare"
+      - "--certificatesresolvers.devops.acme.email=devops@iota.org"
+      - "--certificatesresolvers.devops.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.devops.acme.dnschallenge.delaybeforecheck=0"
     ports:
-      - "80:80"
-      - "8080:8080" # Dashboard traefik accessibile su http://localhost:8080
+      - "443:443"
+    environment:
+      CLOUDFLARE_EMAIL: "it@iota.org"
+      CLOUDFLARE_DNS_API_TOKEN: ${CLOUDFLARE_DNS_API_TOKEN}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./letsencrypt:/letsencrypt
     networks:
       - traefik_net
 
@@ -42,7 +53,7 @@ services:
     depends_on:
       - redis
     ports:
-      - "9184:9184"
+      - "9184:9184" # Metrics port
     environment:
       - CONFIG_PATH=/app/config.yaml
       - RUST_BACKTRACE=1
@@ -51,11 +62,12 @@ services:
       - ${LOCAL_CONFIG_PATH:-./config.yaml}:/app/config.yaml
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.gas.rule=Host(`localhost`) && PathPrefix(`/gas`)"
-      - "traefik.http.routers.gas.entrypoints=web"
+      - "traefik.http.routers.gas.rule=Host(`dpp-demostrator.if4testing.rocks`) && PathPrefix(`/gas`)"
+      - "traefik.http.routers.gas.entrypoints=websecure"
+      - "traefik.http.routers.gas.tls.certresolver=devops"
+      - "traefik.http.services.gas.loadbalancer.server.port=9527"
       - "traefik.http.routers.gas.middlewares=strip-gas-prefix"
       - "traefik.http.middlewares.strip-gas-prefix.stripprefix.prefixes=/gas"
-      - "traefik.http.services.gas.loadbalancer.server.port=9527"
     networks:
       - traefik_net
 
@@ -66,6 +78,7 @@ services:
       args:
         NEXT_PUBLIC_EXPLORER_URL: ${NEXT_PUBLIC_EXPLORER_URL}
         NEXT_PUBLIC_DAPP_URL: ${NEXT_PUBLIC_DAPP_URL}
+        NEXT_PUBLIC_NETWORK_URL: ${NEXT_PUBLIC_NETWORK_URL}
         NEXT_PUBLIC_AUDIT_TRAIL_PKG: ${NEXT_PUBLIC_AUDIT_TRAIL_PKG}
         NEXT_PUBLIC_REWARD_WHITELIST_ID: ${NEXT_PUBLIC_REWARD_WHITELIST_ID}
         NEXT_PUBLIC_ADMIN_CAP_ID: ${NEXT_PUBLIC_ADMIN_CAP_ID}
@@ -73,6 +86,7 @@ services:
         NEXT_PUBLIC_HAS_REWARD: ${NEXT_PUBLIC_HAS_REWARD}
         NEXT_PUBLIC_NETWORK: ${NEXT_PUBLIC_NETWORK}
         NEXT_PUBLIC_PRODUCT_ID: ${NEXT_PUBLIC_PRODUCT_ID}
+        IOTA_IDENTITY_PKG_ID: ${IOTA_IDENTITY_PKG_ID}
         BACKEND_ENDPOINT: ${BACKEND_ENDPOINT}
         BACKEND_API_KEY: ${BACKEND_API_KEY}
         GAS_STATION_URL: ${GAS_STATION_URL}
@@ -87,8 +101,9 @@ services:
       GAS_STATION_AUTH: ${GAS_STATION_AUTH}
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`localhost`)"
-      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.http.routers.frontend.rule=Host(`dpp-demostrator.if4testing.rocks`)"
+      - "traefik.http.routers.frontend.entrypoints=websecure"
+      - "traefik.http.routers.frontend.tls.certresolver=devops"
       - "traefik.http.services.frontend.loadbalancer.server.port=3000"
     networks:
       - traefik_net
@@ -113,6 +128,7 @@ services:
 
 volumes:
   redis_data:
+  traefik_letsencrypt:
 
 
 networks:
