chore: docker and envs updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,7 @@ services:
         NEXT_PUBLIC_NETWORK_URL: ${NEXT_PUBLIC_NETWORK_URL}
         NEXT_PUBLIC_AUDIT_TRAIL_PKG: ${NEXT_PUBLIC_AUDIT_TRAIL_PKG}
         NEXT_PUBLIC_REWARD_WHITELIST_ID: ${NEXT_PUBLIC_REWARD_WHITELIST_ID}
+        NEXT_PUBLIC_REWARD_VAULT_ID: ${NEXT_PUBLIC_REWARD_VAULT_ID}
         NEXT_PUBLIC_ADMIN_CAP_ID: ${NEXT_PUBLIC_ADMIN_CAP_ID}
         NEXT_PUBLIC_REFRESH_INTERVAL_MS: ${NEXT_PUBLIC_REFRESH_INTERVAL_MS}
         NEXT_PUBLIC_HAS_REWARD: ${NEXT_PUBLIC_HAS_REWARD}
@@ -123,6 +124,7 @@ services:
       ROOT_AUTH_SECRET_KEY: ${ROOT_AUTH_SECRET_KEY}
       MANUFACTURER_SECRET_KEY: ${MANUFACTURER_SECRET_KEY}
       IOTA_IDENTITY_PKG_ID: ${IOTA_IDENTITY_PKG_ID}
+      NEXT_PUBLIC_DAPP_URL: ${NEXT_PUBLIC_DAPP_URL}
     networks:
       - traefik_net
 
