--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -45,6 +45,7 @@ ARG TCP_LISTNER
 ARG ROOT_AUTH_SECRET_KEY
 ARG MANUFACTURER_SECRET_KEY
 ARG IOTA_IDENTITY_PKG_ID
+ARG NEXT_PUBLIC_DAPP_URL
 
 ENV ITH_PKG_ID=$ITH_PKG_ID
 ENV API_KEY=$API_KEY
@@ -52,6 +53,7 @@ ENV TCP_LISTNER=$TCP_LISTNER
 ENV ROOT_AUTH_SECRET_KEY=$ROOT_AUTH_SECRET_KEY
 ENV MANUFACTURER_SECRET_KEY=$MANUFACTURER_SECRET_KEY
 ENV IOTA_IDENTITY_PKG_ID=$IOTA_IDENTITY_PKG_ID
+ENV NEXT_PUBLIC_DAPP_URL=$NEXT_PUBLIC_DAPP_URL
 
 CMD sh -c './import_accounts && exec ./main'
 
