--- a/backend/ith/ith.move/Move.toml
+++ b/backend/ith/ith.move/Move.toml
@@ -10,8 +10,8 @@ authors = [
 ]
 
 [dependencies]
-MoveStdlib = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/move-stdlib", rev = "v0.12.0-rc" }
-Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "v0.12.0-rc" }
+MoveStdlib = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/move-stdlib", rev = "v1.4.1" }
+Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "v1.4.1" }
 
 [addresses]
 ith = "0x0"
