chore: update code after hierarchies refactor

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -39,7 +39,7 @@ WORKDIR /app
 COPY --from=builder /usr/src/app/target/release/main ./main
 COPY --from=builder /usr/src/app/target/release/import_accounts ./import_accounts
 
-ARG ITH_PKG_ID
+ARG HIERARCHIES_PKG_ID
 ARG API_KEY
 ARG TCP_LISTNER
 ARG ROOT_AUTH_SECRET_KEY
@@ -47,7 +47,7 @@ ARG MANUFACTURER_SECRET_KEY
 ARG IOTA_IDENTITY_PKG_ID
 ARG NEXT_PUBLIC_DAPP_URL
 
-ENV ITH_PKG_ID=$ITH_PKG_ID
+ENV HIERARCHIES_PKG_ID=$HIERARCHIES_PKG_ID
 ENV API_KEY=$API_KEY
 ENV TCP_LISTNER=$TCP_LISTNER
 ENV ROOT_AUTH_SECRET_KEY=$ROOT_AUTH_SECRET_KEY
