--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -10,6 +10,8 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     cmake \
     git \
+    libudev-dev \
+    libusb-1.0-0-dev \
     && rm -rf /var/lib/apt/lists/*
 
 ENV LIBCLANG_PATH=/usr/lib/llvm-14/lib
@@ -19,7 +21,6 @@ WORKDIR /usr/src/app
 COPY Cargo.toml Cargo.lock ./
 
 COPY src ./src
-COPY ith ./ith
 
 RUN cargo build --release
 
