--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -11,7 +11,7 @@ ARG BACKEND_ENDPOINT
 ARG BACKEND_API_KEY
 ARG GAS_STATION_URL
 ARG GAS_STATION_AUTH
-ARG NEXT_PUBLIC_HAS_REWARD
+ARG NEXT_PUBLIC_HAS_NFT_REWARD
 ARG NEXT_PUBLIC_NETWORK
 ARG NEXT_PUBLIC_PRODUCT_ID
 ARG NEXT_PUBLIC_NETWORK_URL
@@ -29,7 +29,7 @@ ENV BACKEND_ENDPOINT=$BACKEND_ENDPOINT
 ENV BACKEND_API_KEY=$BACKEND_API_KEY
 ENV GAS_STATION_URL=$GAS_STATION_URL
 ENV GAS_STATION_AUTH=$GAS_STATION_AUTH
-ENV NEXT_PUBLIC_HAS_REWARD=$NEXT_PUBLIC_HAS_REWARD
+ENV NEXT_PUBLIC_HAS_NFT_REWARD=$NEXT_PUBLIC_HAS_NFT_REWARD
 ENV NEXT_PUBLIC_NETWORK=$NEXT_PUBLIC_NETWORK
 ENV NEXT_PUBLIC_PRODUCT_ID=$NEXT_PUBLIC_PRODUCT_ID
 
