--- a/frontend-legacy-demonstrator/package.json
+++ b/frontend-legacy-demonstrator/package.json
@@ -18,6 +18,7 @@
     "@iota/identity-wasm": "^1.6.0-beta.3",
     "@iota/iota-sdk": "^1.2.0",
     "@tanstack/react-query": "^5.40.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "i": "^0.3.7",
     "next": "^14.0.3",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
+    "@types/cors": "^2.8.19",
     "@types/node": "18.11.4",
     "@types/qrcode": "^1.5.4",
     "@types/react": "^18.2.38",
