--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@iota/dapp-kit": "^0.5.2",
+    "@iota/identity-wasm": "^1.6.0-beta.3",
     "@iota/iota-sdk": "^1.6.0",
     "@tanstack/react-query": "^5.85.5",
     "@types/styled-components": "^5.1.34",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -30,6 +33,7 @@
     "@storybook/addon-vitest": "^9.1.3",
     "@storybook/nextjs-vite": "^9.1.3",
     "@tailwindcss/postcss": "^4",
+    "@types/cors": "^2.8.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
