--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@iota/iota-sdk": "^1.6.0",
     "@tanstack/react-query": "^5.85.5",
     "@types/styled-components": "^5.1.34",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "next": "15.5.0",
