--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "dotenvx run -- next dev",
+    "build": "dotenvx run -- next build",
+    "start": "dotenvx run -- next start",
     "lint": "eslint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.49.1",
     "@iota/dapp-kit": "^0.5.2",
     "@iota/identity-wasm": "^1.6.0-beta.3",
     "@iota/iota-sdk": "^1.6.0",
@@ -18,7 +19,6 @@
     "@types/styled-components": "^5.1.34",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
