--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.49.1",
     "@iota/dapp-kit": "^0.5.2",
-    "@iota/identity-wasm": "^1.6.0-beta.3",
-    "@iota/iota-sdk": "^1.6.0",
+    "@iota/identity-wasm": "^1.5.1",
+    "@iota/iota-sdk": "^1.6.1",
     "@tanstack/react-query": "^5.85.5",
     "@types/styled-components": "^5.1.34",
     "clsx": "^2.1.1",
