fix: docker-compose.prod

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,9 +17,8 @@ services:
     depends_on:
       - redis
     ports:
-      - "9184:9184" # Metrics port
-    expose:
-      - 9527
+      - "9184:9184"
+      - "9527:9527" # Metrics port
     environment:
       - CONFIG_PATH=/app/config.yaml
       - RUST_BACKTRACE=1
@@ -35,8 +34,8 @@ services:
       - "traefik.http.routers.gas.middlewares=strip-gas-prefix"
       - "traefik.http.middlewares.strip-gas-prefix.stripprefix.prefixes=/gas"
       # Rate Limit middleware (10 requests per hour)
-      - "traefik.http.middlewares.gas-rate-limit.rateLimit.average=2"
-      - "traefik.http.middlewares.gas-rate-limit.rateLimit.burst=2"
+      - "traefik.http.middlewares.gas-rate-limit.rateLimit.average=20"
+      - "traefik.http.middlewares.gas-rate-limit.rateLimit.burst=20"
       - "traefik.http.middlewares.gas-rate-limit.rateLimit.period=1h"
       - "traefik.http.middlewares.gas-rate-limit.rateLimit.sourceCriterion.ipStrategy.depth=0"
     networks:
@@ -52,6 +51,7 @@ services:
         NEXT_PUBLIC_NETWORK_URL: ${NEXT_PUBLIC_NETWORK_URL}
         NEXT_PUBLIC_AUDIT_TRAIL_PKG: ${NEXT_PUBLIC_AUDIT_TRAIL_PKG}
         NEXT_PUBLIC_REWARD_WHITELIST_ID: ${NEXT_PUBLIC_REWARD_WHITELIST_ID}
+        NEXT_PUBLIC_REWARD_VAULT_ID: ${NEXT_PUBLIC_REWARD_VAULT_ID}
         NEXT_PUBLIC_ADMIN_CAP_ID: ${NEXT_PUBLIC_ADMIN_CAP_ID}
         NEXT_PUBLIC_REFRESH_INTERVAL_MS: ${NEXT_PUBLIC_REFRESH_INTERVAL_MS}
         NEXT_PUBLIC_HAS_NFT_REWARD: ${NEXT_PUBLIC_HAS_NFT_REWARD}
