--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,27 +17,14 @@ services:
     depends_on:
       - redis
     ports:
-      - "9184:9184"
-      - "9527:9527" # Metrics port
+      - "9184:9184"  # Metrics port
+      - "9527:9527"  # Gas Station API port
     environment:
       - CONFIG_PATH=/app/config.yaml
       - RUST_BACKTRACE=1
       - GAS_STATION_AUTH=${GAS_STATION_AUTH}
     volumes:
       - ${LOCAL_CONFIG_PATH:-./config.yaml}:/app/config.yaml
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.gas.rule=Host(`dpp-demostrator-prod.if4testing.rocks`) && PathPrefix(`/gas`)"
-      - "traefik.http.routers.gas.entrypoints=websecure"
-      - "traefik.http.routers.gas.tls.certresolver=devops"
-      - "traefik.http.services.gas.loadbalancer.server.port=9527"
-      - "traefik.http.routers.gas.middlewares=strip-gas-prefix"
-      - "traefik.http.middlewares.strip-gas-prefix.stripprefix.prefixes=/gas"
-      # Rate Limit middleware (10 requests per hour)
-      - "traefik.http.middlewares.gas-rate-limit.rateLimit.average=20"
-      - "traefik.http.middlewares.gas-rate-limit.rateLimit.burst=20"
-      - "traefik.http.middlewares.gas-rate-limit.rateLimit.period=1h"
-      - "traefik.http.middlewares.gas-rate-limit.rateLimit.sourceCriterion.ipStrategy.depth=0"
     networks:
       - traefik_net
 
@@ -78,6 +65,18 @@ services:
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=devops"
       - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+      - "traefik.http.routers.frontend.middlewares=frontend-rl,frontend-inflight,security-headers,compress"
+      # Frontend rate limiting
+      - "traefik.http.middlewares.frontend-rl.rateLimit.average=120"
+      - "traefik.http.middlewares.frontend-rl.rateLimit.burst=200"
+      - "traefik.http.middlewares.frontend-rl.rateLimit.period=1m"
+      - "traefik.http.middlewares.frontend-inflight.inFlightReq.amount=60"
+      # Security headers
+      - "traefik.http.middlewares.security-headers.headers.frameDeny=true"
+      - "traefik.http.middlewares.security-headers.headers.contentTypeNosniff=true"
+      - "traefik.http.middlewares.security-headers.headers.browserXssFilter=true"
+      # Compression
+      - "traefik.http.middlewares.compress.compress=true"
     networks:
       - traefik_net
 
@@ -88,7 +87,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 12G
+          memory: 6G
     environment:
       HIERARCHIES_PKG_ID: ${HIERARCHIES_PKG_ID}
       API_KEY: ${API_KEY}
