--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -33,6 +33,8 @@ ENV NEXT_PUBLIC_NETWORK=$NEXT_PUBLIC_NETWORK
 ENV NEXT_PUBLIC_PRODUCT_ID=$NEXT_PUBLIC_PRODUCT_ID
 ENV NEXT_PUBLIC_FEDERATION_ID=${NEXT_PUBLIC_FEDERATION_ID}
 ENV NEXT_PUBLIC_IOTA_IDENTITY_PKG_ID=${NEXT_PUBLIC_IOTA_IDENTITY_PKG_ID}
+ENV NEXT_PUBLIC_MANUFACTURER_NAME=${NEXT_PUBLIC_MANUFACTURER_NAME}
+ENV NEXT_PUBLIC_MANUFACTURER_DID=${NEXT_PUBLIC_MANUFACTURER_DID}
 ENV IOTA_IDENTITY_PKG_ID=$IOTA_IDENTITY_PKG_ID
 ENV BACKEND_ENDPOINT=$BACKEND_ENDPOINT
 ENV BACKEND_API_KEY=$BACKEND_API_KEY
