chore: frontend dockerfile updated

--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -20,6 +20,15 @@ ARG BACKEND_API_KEY
 ARG GAS_STATION_URL
 ARG GAS_STATION_AUTH
 
+#TMP
+ARG NEXT_PUBLIC_MANUFACTURER_NAME
+ARG NEXT_PUBLIC_MANUFACTURER_DID
+
+ENV NEXT_PUBLIC_MANUFACTURER_NAME=${NEXT_PUBLIC_MANUFACTURER_NAME}
+ENV NEXT_PUBLIC_MANUFACTURER_DID=${NEXT_PUBLIC_MANUFACTURER_DID}
+# END TMP
+
+
 ENV NEXT_PUBLIC_EXPLORER_URL=$NEXT_PUBLIC_EXPLORER_URL
 ENV NEXT_PUBLIC_DAPP_URL=$NEXT_PUBLIC_DAPP_URL
 ENV NEXT_PUBLIC_NETWORK_URL=$NEXT_PUBLIC_NETWORK_URL
@@ -33,8 +42,6 @@ ENV NEXT_PUBLIC_NETWORK=$NEXT_PUBLIC_NETWORK
 ENV NEXT_PUBLIC_PRODUCT_ID=$NEXT_PUBLIC_PRODUCT_ID
 ENV NEXT_PUBLIC_FEDERATION_ID=${NEXT_PUBLIC_FEDERATION_ID}
 ENV NEXT_PUBLIC_IOTA_IDENTITY_PKG_ID=${NEXT_PUBLIC_IOTA_IDENTITY_PKG_ID}
-ENV NEXT_PUBLIC_MANUFACTURER_NAME=${NEXT_PUBLIC_MANUFACTURER_NAME}
-ENV NEXT_PUBLIC_MANUFACTURER_DID=${NEXT_PUBLIC_MANUFACTURER_DID}
 ENV IOTA_IDENTITY_PKG_ID=$IOTA_IDENTITY_PKG_ID
 ENV BACKEND_ENDPOINT=$BACKEND_ENDPOINT
 ENV BACKEND_API_KEY=$BACKEND_API_KEY
