--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -70,6 +70,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
+        APP_ENV: "dev"
         NEXT_PUBLIC_EXPLORER_URL: ${NEXT_PUBLIC_EXPLORER_URL}
         NEXT_PUBLIC_DAPP_URL: ${NEXT_PUBLIC_DAPP_URL}
         NEXT_PUBLIC_NETWORK_URL: ${NEXT_PUBLIC_NETWORK_URL}
