--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -33,6 +33,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
+        APP_ENV: "dev"
         NEXT_PUBLIC_EXPLORER_URL: ${NEXT_PUBLIC_EXPLORER_URL}
         NEXT_PUBLIC_DAPP_URL: http://localhost:3000
         NEXT_PUBLIC_NETWORK_URL: ${NEXT_PUBLIC_NETWORK_URL}
