--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
     "@eslint/eslintrc": "^3",
+    "@ianvs/prettier-plugin-sort-imports": "4.7.0",
     "@storybook/addon-a11y": "^9.1.3",
     "@storybook/addon-docs": "^9.1.3",
     "@storybook/addon-onboarding": "^9.1.3",
@@ -40,10 +41,13 @@
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9",
+    "cspell": "9.2.2",
+    "eslint": "^9.38.0",
     "eslint-config-next": "15.5.0",
     "eslint-plugin-storybook": "^9.1.3",
     "playwright": "^1.55.0",
+    "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "0.7.1",
     "storybook": "^9.1.3",
     "tailwindcss": "^4",
     "typescript": "^5",
