--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "dotenvx run -- next dev",
-    "build": "next build",
+    "dev": "dotenvx run -- next dev --webpack",
+    "build": "next build --webpack",
     "start": "dotenvx run -- next start",
     "check-type": "tsc --noEmit",
     "check-lint": "eslint src/ --no-warn-ignored",
@@ -23,9 +23,9 @@
     "@types/styled-components": "^5.1.34",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
-    "next": "15.5.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "16.0.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "styled-components": "^6.1.19",
     "swr": "^2.3.6"
   },
@@ -41,13 +41,13 @@
     "@tailwindcss/postcss": "^4",
     "@types/cors": "^2.8.19",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "cspell": "9.2.2",
     "eslint": "^9.38.0",
-    "eslint-config-next": "15.5.0",
+    "eslint-config-next": "16.0.1",
     "eslint-plugin-storybook": "^9.1.3",
     "playwright": "^1.55.0",
     "prettier": "3.6.2",
@@ -56,5 +56,9 @@
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
