--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@iota/dapp-kit": "^0.5.2",
     "@iota/identity-wasm": "1.6.0-beta.7",
     "@iota/iota-sdk": "^1.6.1",
+    "@iota/wallet-standard": "^0.2.15",
     "@tanstack/react-query": "^5.85.5",
     "@types/styled-components": "^5.1.34",
     "clsx": "^2.1.1",
@@ -30,14 +31,14 @@
     "swr": "^2.3.6"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.1",
+    "@chromatic-com/storybook": "^4.1.2",
     "@eslint/eslintrc": "^3",
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
-    "@storybook/addon-a11y": "^9.1.3",
-    "@storybook/addon-docs": "^9.1.3",
-    "@storybook/addon-onboarding": "^9.1.3",
-    "@storybook/addon-vitest": "^9.1.3",
-    "@storybook/nextjs-vite": "^9.1.3",
+    "@storybook/addon-a11y": "^10.0.2",
+    "@storybook/addon-docs": "^10.0.2",
+    "@storybook/addon-onboarding": "^10.0.2",
+    "@storybook/addon-vitest": "^10.0.2",
+    "@storybook/nextjs-vite": "^10.0.2",
     "@tailwindcss/postcss": "^4",
     "@types/cors": "^2.8.19",
     "@types/node": "^20",
@@ -48,11 +49,11 @@
     "cspell": "9.2.2",
     "eslint": "^9.38.0",
     "eslint-config-next": "16.0.1",
-    "eslint-plugin-storybook": "^9.1.3",
+    "eslint-plugin-storybook": "^10.0.2",
     "playwright": "^1.55.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.7.1",
-    "storybook": "^9.1.3",
+    "storybook": "^10.0.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
