--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -8,6 +8,7 @@ ARG NEXT_PUBLIC_NETWORK_URL
 ARG NEXT_PUBLIC_AUDIT_TRAIL_PKG
 ARG NEXT_PUBLIC_REWARD_WHITELIST_ID
 ARG NEXT_PUBLIC_REWARD_VAULT_ID
+ARG NEXT_PUBLIC_REWARD_VAULT_TREASURE_CAP_ID
 ARG NEXT_PUBLIC_ADMIN_CAP_ID
 ARG NEXT_PUBLIC_REFRESH_INTERVAL_MS
 ARG NEXT_PUBLIC_HAS_NFT_REWARD
@@ -30,6 +31,7 @@ ENV NEXT_PUBLIC_NETWORK_URL=$NEXT_PUBLIC_NETWORK_URL
 ENV NEXT_PUBLIC_AUDIT_TRAIL_PKG=$NEXT_PUBLIC_AUDIT_TRAIL_PKG
 ENV NEXT_PUBLIC_REWARD_WHITELIST_ID=$NEXT_PUBLIC_REWARD_WHITELIST_ID
 ENV NEXT_PUBLIC_REWARD_VAULT_ID=${NEXT_PUBLIC_REWARD_VAULT_ID}
+ENV NEXT_PUBLIC_REWARD_VAULT_TREASURE_CAP_ID=${NEXT_PUBLIC_REWARD_VAULT_TREASURE_CAP_ID}
 ENV NEXT_PUBLIC_ADMIN_CAP_ID=$NEXT_PUBLIC_ADMIN_CAP_ID
 ENV NEXT_PUBLIC_REFRESH_INTERVAL_MS=$NEXT_PUBLIC_REFRESH_INTERVAL_MS
 ENV NEXT_PUBLIC_HAS_NFT_REWARD=$NEXT_PUBLIC_HAS_NFT_REWARD
