--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@types/styled-components": "^5.1.34",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "i18next": "25.6.1",
+    "i18next-http-backend": "3.0.2",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -50,6 +52,7 @@
     "eslint": "^9.38.0",
     "eslint-config-next": "16.0.1",
     "eslint-plugin-storybook": "^10.0.2",
+    "i18next-cli": "1.23.0",
     "playwright": "^1.55.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.7.1",
