--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,51 +15,51 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.49.1",
-    "@iota/dapp-kit": "^0.5.2",
+    "@dotenvx/dotenvx": "1.49.1",
+    "@iota/dapp-kit": "0.5.2",
     "@iota/identity-wasm": "1.6.0-beta.7",
-    "@iota/iota-sdk": "^1.6.1",
-    "@iota/wallet-standard": "^0.2.15",
-    "@tanstack/react-query": "^5.85.5",
-    "@types/styled-components": "^5.1.34",
-    "clsx": "^2.1.1",
-    "cors": "^2.8.5",
+    "@iota/iota-sdk": "1.6.1",
+    "@iota/wallet-standard": "0.2.15",
+    "@tanstack/react-query": "5.85.5",
+    "@types/styled-components": "5.1.34",
+    "clsx": "2.1.1",
+    "cors": "2.8.5",
     "i18next": "25.6.1",
     "i18next-http-backend": "3.0.2",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "styled-components": "^6.1.19",
-    "swr": "^2.3.6"
+    "styled-components": "6.1.19",
+    "swr": "2.3.6"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.2",
-    "@eslint/eslintrc": "^3",
+    "@chromatic-com/storybook": "4.1.2",
+    "@eslint/eslintrc": "3.3.1",
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
-    "@storybook/addon-a11y": "^10.0.2",
-    "@storybook/addon-docs": "^10.0.2",
-    "@storybook/addon-onboarding": "^10.0.2",
-    "@storybook/addon-vitest": "^10.0.2",
-    "@storybook/nextjs-vite": "^10.0.2",
-    "@tailwindcss/postcss": "^4",
-    "@types/cors": "^2.8.19",
+    "@storybook/addon-a11y": "10.0.2",
+    "@storybook/addon-docs": "10.0.2",
+    "@storybook/addon-onboarding": "10.0.2",
+    "@storybook/addon-vitest": "10.0.2",
+    "@storybook/nextjs-vite": "10.0.2",
+    "@tailwindcss/postcss": "4.1.12",
+    "@types/cors": "2.8.19",
     "@types/node": "^20",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
-    "@vitest/browser": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/browser": "3.2.4",
+    "@vitest/coverage-v8": "3.2.4",
     "cspell": "9.2.2",
-    "eslint": "^9.38.0",
+    "eslint": "9.38.0",
     "eslint-config-next": "16.0.1",
-    "eslint-plugin-storybook": "^10.0.2",
+    "eslint-plugin-storybook": "10.0.2",
     "i18next-cli": "1.23.0",
-    "playwright": "^1.55.0",
+    "playwright": "1.55.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.7.1",
-    "storybook": "^10.0.2",
-    "tailwindcss": "^4",
+    "storybook": "10.0.2",
+    "tailwindcss": "4.1.12",
     "typescript": "^5",
-    "vitest": "^3.2.4"
+    "vitest": "3.2.4"
   },
   "overrides": {
     "@types/react": "19.2.2",
