--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -40,7 +40,7 @@ WORKDIR /app
 COPY --from=builder /usr/src/app/target/release/main ./main
 COPY --from=builder /usr/src/app/target/release/import_accounts ./import_accounts
 
-ARG HIERARCHIES_PKG_ID
+ARG IOTA_HIERARCHIES_PKG_ID
 ARG API_KEY
 ARG TCP_LISTNER
 ARG ROOT_AUTH_SECRET_KEY
@@ -48,7 +48,7 @@ ARG MANUFACTURER_SECRET_KEY
 ARG IOTA_IDENTITY_PKG_ID
 ARG NEXT_PUBLIC_DAPP_URL
 
-ENV HIERARCHIES_PKG_ID=$HIERARCHIES_PKG_ID
+ENV IOTA_HIERARCHIES_PKG_ID=$IOTA_HIERARCHIES_PKG_ID
 ENV API_KEY=$API_KEY
 ENV TCP_LISTNER=$TCP_LISTNER
 ENV ROOT_AUTH_SECRET_KEY=$ROOT_AUTH_SECRET_KEY
