--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -74,7 +74,7 @@ services:
         NEXT_PUBLIC_EXPLORER_URL: ${NEXT_PUBLIC_EXPLORER_URL}
         NEXT_PUBLIC_DAPP_URL: ${NEXT_PUBLIC_DAPP_URL}
         NEXT_PUBLIC_NETWORK_URL: ${NEXT_PUBLIC_NETWORK_URL}
-        NEXT_PUBLIC_AUDIT_TRAIL_PKG: ${NEXT_PUBLIC_AUDIT_TRAIL_PKG}
+        NEXT_PUBLIC_IOTA_CUSTOM_NOTARIZATION_PKG_ID: ${NEXT_PUBLIC_IOTA_CUSTOM_NOTARIZATION_PKG_ID}
         NEXT_PUBLIC_REWARD_WHITELIST_ID: ${NEXT_PUBLIC_REWARD_WHITELIST_ID}
         NEXT_PUBLIC_REWARD_VAULT_ID: ${NEXT_PUBLIC_REWARD_VAULT_ID}
         NEXT_PUBLIC_REWARD_VAULT_TREASURE_CAP_ID: ${NEXT_PUBLIC_REWARD_VAULT_TREASURE_CAP_ID}
@@ -117,7 +117,7 @@ services:
         limits:
           memory: 12G
     environment:
-      HIERARCHIES_PKG_ID: ${HIERARCHIES_PKG_ID}
+      IOTA_HIERARCHIES_PKG_ID: ${IOTA_HIERARCHIES_PKG_ID}
       API_KEY: ${API_KEY}
       TCP_LISTNER: ${TCP_LISTNER}
       ROOT_AUTH_SECRET_KEY: ${ROOT_AUTH_SECRET_KEY}
