--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -37,7 +37,7 @@ services:
         limits:
           memory: 12G
     environment:
-      HIERARCHIES_PKG_ID: ${HIERARCHIES_PKG_ID}
+      IOTA_HIERARCHIES_PKG_ID: ${IOTA_HIERARCHIES_PKG_ID}
       API_KEY: ${API_KEY}
       TCP_LISTNER: ${TCP_LISTNER}
       ROOT_AUTH_SECRET_KEY: ${ROOT_AUTH_SECRET_KEY}
