--- a/contract/Move.toml
+++ b/contract/Move.toml
@@ -1,5 +1,5 @@
 [package]
-name = "audit trails"
+name = "IOTA Custom Notarization"
 license = "Apache-2.0"
 version = "0.1.0"
 edition = "2024.beta"
