--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -37,10 +37,9 @@ services:
         NEXT_PUBLIC_EXPLORER_URL: ${NEXT_PUBLIC_EXPLORER_URL}
         NEXT_PUBLIC_DAPP_URL: http://localhost:3000
         NEXT_PUBLIC_NETWORK_URL: ${NEXT_PUBLIC_NETWORK_URL}
-        NEXT_PUBLIC_AUDIT_TRAIL_PKG: ${NEXT_PUBLIC_AUDIT_TRAIL_PKG}
+        NEXT_PUBLIC_IOTA_CUSTOM_NOTARIZATION_PKG_ID: ${NEXT_PUBLIC_IOTA_CUSTOM_NOTARIZATION_PKG_ID}
         NEXT_PUBLIC_REWARD_WHITELIST_ID: ${NEXT_PUBLIC_REWARD_WHITELIST_ID}
         NEXT_PUBLIC_REWARD_VAULT_ID: ${NEXT_PUBLIC_REWARD_VAULT_ID}
-        NEXT_PUBLIC_REWARD_VAULT_TREASURE_CAP_ID: ${NEXT_PUBLIC_REWARD_VAULT_TREASURE_CAP_ID}
         NEXT_PUBLIC_ADMIN_CAP_ID: ${NEXT_PUBLIC_ADMIN_CAP_ID}
         NEXT_PUBLIC_REFRESH_INTERVAL_MS: ${NEXT_PUBLIC_REFRESH_INTERVAL_MS}
         NEXT_PUBLIC_HAS_NFT_REWARD: ${NEXT_PUBLIC_HAS_NFT_REWARD}
@@ -79,7 +78,7 @@ services:
         limits:
           memory: 12G
     environment:
-      HIERARCHIES_PKG_ID: ${HIERARCHIES_PKG_ID}
+      IOTA_HIERARCHIES_PKG_ID: ${IOTA_HIERARCHIES_PKG_ID}
       API_KEY: ${API_KEY}
       TCP_LISTNER: ${TCP_LISTNER}
       ROOT_AUTH_SECRET_KEY: ${ROOT_AUTH_SECRET_KEY}
