--- a/contract/Move.toml
+++ b/contract/Move.toml
@@ -9,4 +9,4 @@ edition = "2024.beta"
 Hierarchies = { git = "https://github.com/iotaledger/hierarchies.git", subdir = "hierarchies-move", rev = "v0.1.2" }
 
 [addresses]
-audit_trails = "0x0"
+custom_notarization = "0x0"
