chore: hardening frontend image on dev and prod

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -66,6 +66,9 @@ services:
       - traefik_net
 
   frontend:
+    read_only: true
+    tmpfs:
+      - /tmp:rw,noexec,nosuid,nodev,size=64m
     build:
       context: ./frontend
       dockerfile: Dockerfile
